--- a/frontend/Agrihub/package.json
+++ b/frontend/Agrihub/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.3",
