--- a/frontend/Agrihub/package.json
+++ b/frontend/Agrihub/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.3",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
     "vite-plugin-node-polyfills": "^0.23.0"
